Fixed header spacing

--- a/src/components/NavMenu.css
+++ b/src/components/NavMenu.css
@@ -5,16 +5,7 @@
   .nav-link {
     color: #613dc1 !important;
     font-family: montserrat, sans-serif;
-    float: right;
   }
   .nav-link:hover {
     color: #d0d1ff !important;
-  }
-
-  .navbar-text{
-    color: #000000;   
-  }
-  .email {
-    color: #999;
-    margin: 0 20px;
   }
